--- a/web/logado/admin/template.xhtml
+++ b/web/logado/admin/template.xhtml
@@ -3,38 +3,27 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
         <title>SGIAA</title>
         <h:outputStylesheet library="css" name="css.css"/>
     </h:head>
-    <h:body onload="#{usuarioBean.recuperaUsuario()}">
-        <h:form>
+    <h:body onload="#{usuarioBean.recuperaUsuario()}" >
+        <h:form id="fprincipal">
+
+            <!--dialogo para confirmação do botão exclcuir-->
+            <p:confirmDialog global="true">
+                <p:commandButton value="Sim" type="button"
+                                 styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
+                <p:commandButton value="Não" type="button"
+                                 styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
+            </p:confirmDialog>
             <p:megaMenu>
-                <p:submenu label="Compras" icon="ui-icon-gear">
-                    <p:column>
-                        <p:submenu label="Inserir item">
-                            <p:menuitem value="Abre uma caixa de diálogo para cadastrar o item"/>
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
-                <p:submenu label="Vendas" icon="ui-icon-gear">
-                    <p:column>
-                        <p:submenu label="Buscar item">
-                            <p:menuitem value="Iniciar venda" oncomplete="PF('vendas').show();"></p:menuitem>
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
-                <p:submenu label="Cadastro" icon="ui-icon-person" >
-                    <p:column>
-                        <p:submenu label="Cadastrar">
-                            <p:menuitem value="Cliente" oncomplete="PF('').show();"></p:menuitem>
-                            <p:menuitem value="Funcionário" oncomplete="PF('').show();"></p:menuitem>
-                            <p:menuitem value="Administrador" oncomplete="PF('').show();"></p:menuitem>
-                            <p:menuitem value="Produto" oncomplete="PF('').show();"></p:menuitem>
-                        </p:submenu>
-                    </p:column>
-                </p:submenu>
+                <p:menuitem value="Produtos" url="produto.xhtml" actionListener="#{produtoBean.init()}"></p:menuitem>
+                <p:menuitem value="Usuários" url="usuario.xhtml"></p:menuitem>
+                <p:menuitem value="Cliente" url="cliente.xhtml"></p:menuitem>
+                <p:menuitem value="Vendas" url="venda.xhtml"></p:menuitem>
                 <p:submenu label="Relatórios" icon="ui-icon-person" >
                     <p:column>
                         <p:submenu label="Acompanhamento">
@@ -43,10 +32,38 @@
                         </p:submenu>
                     </p:column>
                 </p:submenu>
-                <p:menuitem value="Carrinho"  oncomplete="PF('carrinho').show();" icon="fa fa-shopping-cart" />
-                <p:menuitem value="Sair" url="#" icon="ui-icon-close" />
-                <p:menuitem value="Bem-vindo #{usuarioBean.usuario.nome}"/>
+                <p:menuitem value="Carrinho" oncomplete="PF('carrinho').show();" icon="fa fa-shopping-cart" action="#{carrinhoBean.calculaTotal()}" />
+                <p:menuitem value="Sair" action="#{validador.logout()}" icon="ui-icon-close" />
+                <p:menuitem value="Bem-vindo #{usuarioBean.usuarioLogado.nome}"/>
             </p:megaMenu>
+
+            <!--exibir o carrinho com os produtos a serem vendidos ao usuário -->
+            <p:dialog  id="diagCarrinho" header="Produtos do carrinho" widgetVar="carrinho"
+                       height="100%" width="50%" resizable="false">
+                <p:dataTable value="#{carrinhoBean.carrinho}" var="produto" id="tabcarrinho" widgetVar="cellUsuario"
+                             paginator="true" rows="10" editable="true" paginatorPosition="top">
+                    <p:column headerText="Opções" width="5%">
+                        <!--actionListener=""-->
+                        <p:commandButton icon="fa fa-trash-o" title="Excluir" update="fprincipal:tabcarrinho :fprincipal:diagCarrinho"
+                                         actionListener="#{carrinhoBean.removeCarrinho}">
+                            <f:attribute name="produtoEscolhido" value="#{produto}" />
+                        </p:commandButton>
+                    </p:column> 
+                    <p:column headerText="Código" sortBy="#{produto.id}" filterBy="#{produto.id}" width="7%">
+                        <h:outputText value="#{produto.id}"></h:outputText>
+                    </p:column>
+                    <p:column headerText="Nome" sortBy="#{produto.nome}" filterBy="#{produto.nome}" width="12%">
+                        <h:outputText value="#{produto.nome}"></h:outputText>
+                    </p:column>
+                    <p:column headerText="Quantidade" sortBy="#{produto.quantidadeVenda}" filterBy="#{produto.quantidadeVenda}" width="12%">
+                        <h:outputText value="#{produto.quantidadeVenda}"></h:outputText>
+                    </p:column>
+
+                </p:dataTable>
+
+                <p:outputLabel value="Total: #{carrinhoBean.total}"/>
+            </p:dialog>
+
         </h:form>
         <hr/>
         <ui:insert></ui:insert>
